Changed to Apache Http client instead of standard java client.